# Data_privacy_form_consent_analysis

./: .gitignore  01_analisis_checklists.ipynb  02_generate_metrics.ipynb  03_analisis_herramientas.ipynb  CLAUDE.md  analisis_checklists.ipynb  analisis_herramientas.ipynb  generate_metrics.ipynb  main.py  paper_methodology_results.md  paper_methodology_results.tex  pyproject.toml
metrics/: process_data.py
metrics/clears_metrics/: calculator.py
metrics/mer_trans_metrics/: calculator.py  models.py
metrics/readability_complexity/: Mapa_indices.xlsx  calculator.py  lista_abreviaturas_esp.xlsx
notebooks/01_first_analysis/: 01_analisis_checklists.ipynb  02_generate_metrics.ipynb  03_analisis_herramientas.ipynb  analisis_herramientas_completo.xlsx  clean.xlsx  metrics.xlsx  table_5_2_checklist_compliance.xlsx  table_5_2_checklist_compliance_change_names.xlsx  table_5_3_group_averages.xlsx  table_5_4_best_per_group.xlsx  table_5_5_stability.xlsx  totales_checkers.xlsx
notebooks/02_second_analysis/: 01_analisis_checklists.ipynb  02_generate_metrics.ipynb  03_analisis_herramientas.ipynb  analisis_herramientas_completo.xlsx  clean.xlsx  comparacion_capa2.xlsx  metrics.xlsx  totales_checkers.xlsx
notebooks/03_e2r_guidelines/: 01_analysis_guidelines.ipynb  fragments_by_guideline.xlsx  guidelines_analysis.xlsx  table_5_1_guideline_violations.xlsx  ~$fragments_by_guideline.xlsx
notebooks/04_analize_with_paper_e2r/: 01_survey_guidelines_analysis.ipynb
papers/FACILE/: Questionnaire Answers.csv
src/: utils.py
src/metrics/: process_data.py
(+5 files in other folders)
